Looks like static index.html is ready

--- a/index.html
+++ b/index.html
@@ -9,6 +9,156 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="header-img"></div>
+      <div class="wrapper">
+        <div class="header-content">
+          <div class="avatar">
+            <img src="images/featured/avatar.webp" alt="Portrait of Nadezda Beletskaya" />
+          </div>
+          <div class="name-loc">
+            <h1 class="name">Nadezda Beletskaya</h1>
+            <p class="loc">Malmö</p>
+          </div>
+          <div class="button">
+            <button class="btn" type="button">
+              <span class="icon icon-mail"></span>
+              <span>Message</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <div class="wrapper">
+        <article class="presentation">
+          <p>
+            I work with soft pastels, watercolours and ink, acrylic.
+            <br />
+            <br />
+            The vivid and soft hues of watercolours. The preciseness and streamlined features of ink. I have always been fascinated by both of these and the way I can make them both come to live and
+            develop together in my paintings. My art is not only a fusion of these two motifs, but also a journey that unites the classical art school with Chinese painting.
+            <br />
+            <br />
+            “Simplicity is the ultimate sophistication.” Leonardo da Vinci
+            <br />
+            <br />
+            <a href="https://www.instagram.com/missbelka/" target="_blank" rel="noopener noreferrer">Instagram: @missbelka</a>
+            <br />
+            "Belka" Art Studio at Sofierogatan 3B, Malmö
+          </p>
+
+          <p>
+            <span class="presentation__title">Education</span>
+            <br />
+            2000 - 2006 Surikov School of Classical Arts, Siberia, Russia
+            <br />
+            2008 - 2016 The Chinese Painting and Calligraphy Society of Singapore
+            <br />
+            2022 - present time. Belka Art Studio, Malmö, Sweden
+          </p>
+
+          <p>
+            <span class="presentation__title">Exhibitions</span>
+            <br />
+            2021 Galleri Helg. Malmö, Sweden
+            <br />
+            2022 September: Galleri Helg. Malmö, Sweden
+            <br />
+            2022 October: Luftkastellet. Malmö, Sweden
+            <br />
+            2023 September: Galleri Helg. Malmö, Sweden
+            <br />
+            2024 September: Galleri Helg. Malmö, Sweden
+            <br />
+            2024 September: Romele Konsthall. Juried exhibition. Skåne, Sweden
+          </p>
+        </article>
+      </div>
+
+      <div class="wrapper wrapper-large">
+        <section class="album">
+          <div class="album-header">
+            <div class="album-header-left">
+              <a href="gallery.html"><h2 class="album-title">Chinese Ink &amp; Watercolours</h2></a>
+              <a href="gallery.html"><span class="album-count">47 works</span></a>
+            </div>
+            <a href="gallery.html" class="btn">
+              <span>Show all</span>
+            </a>
+          </div>
+
+          <div class="album-grid">
+            <article id="artwork-101" class="artw">
+              <a class="artw-media" href="images/gallery/001.webp">
+                <img src="images/gallery/001_tn.webp" alt="White Wisdom" />
+              </a>
+              <div class="artw-info">
+                <div class="artw-row">
+                  <h3 class="artw-title">White Wisdom</h3>
+                  <div class="artw-price">4&nbsp;000 kr</div>
+                </div>
+                <div class="artw-size">40,0 × 50,0 cm</div>
+              </div>
+            </article>
+
+            <article id="artwork-102" class="artw">
+              <a class="artw-media" href="images/gallery/002.webp">
+                <img src="images/gallery/002_tn.webp" alt="White Wisdom" />
+              </a>
+              <div class="artw-info">
+                <div class="artw-row">
+                  <h3 class="artw-title">White Wisdom</h3>
+                  <div class="artw-price">4&nbsp;000 kr</div>
+                </div>
+                <div class="artw-size">40,0 × 50,0 cm</div>
+              </div>
+            </article>
+
+            <article id="artwork-103" class="artw">
+              <a class="artw-media" href="images/gallery/003.webp">
+                <img src="images/gallery/003_tn.webp" alt="White Wisdom" />
+              </a>
+              <div class="artw-info">
+                <div class="artw-row">
+                  <h3 class="artw-title">White Wisdom</h3>
+                  <div class="artw-price">4&nbsp;000 kr</div>
+                </div>
+                <div class="artw-size">40,0 × 50,0 cm</div>
+              </div>
+            </article>
+
+            <article id="artwork-104" class="artw">
+              <a class="artw-media" href="images/gallery/004.webp">
+                <img src="images/gallery/004_tn.webp" alt="White Wisdom" />
+              </a>
+              <div class="artw-info">
+                <div class="artw-row">
+                  <h3 class="artw-title">White Wisdom</h3>
+                  <div class="artw-price">4&nbsp;000 kr</div>
+                </div>
+                <div class="artw-size">40,0 × 50,0 cm</div>
+              </div>
+            </article>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="wrapper wrapper-large">
+        <h3 class="footer__title">Contact Nadezda Beletskaya</h3>
+        <div class="footer-btn-wrapper">
+          <button class="btn" type="button">
+            <span class="icon icon-mail"></span>
+            <span>Message</span>
+          </button>
+          <a href="https://www.instagram.com/missbelka" aria-label="Instagram" target="_blank" rel="nofollow noopener" class="btn"><span class="icon icon-instagram"></span></a>
+        </div>
+      </div>
+    </footer>
+
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
