added js code for open/close menu on mobile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <body>
     <header class="header">
       <div class="header-img"></div>
+
+      <button id="hamburger" class="hamburger" aria-label="Open menu" aria-controls="siteNav" aria-expanded="false">
+        <span class="icon icon-menu"></span>
+      </button>
+
+      <nav id="siteNav" class="mobile-nav" aria-hidden="true">
+        <a class="mobile-nav__item" href="album.html">Album</a>
+      </nav>
+
       <div class="wrapper">
         <div class="header-content">
           <div class="avatar">
@@ -81,10 +90,10 @@
         <section class="album">
           <div class="album-header">
             <div class="album-header-left">
-              <a href="gallery.html"><h2 class="album-title">Chinese Ink &amp; Watercolours</h2></a>
-              <a href="gallery.html"><span class="album-count">47 works</span></a>
+              <a href="album.html"><h2 class="album-title">Chinese Ink &amp; Watercolours</h2></a>
+              <a href="album.html"><span class="album-count">47 works</span></a>
             </div>
-            <a href="gallery.html" class="btn">
+            <a href="album.html" class="btn">
               <span>Show all</span>
             </a>
           </div>
