added loading gallery preview images via JS

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
           </div>
 
           <div class="album-grid">
-            <article id="artwork-101" class="artw">
+            <!-- Content will be added with JavaScript -->
+            <!-- <article id="artwork-101" class="artw">
               <a class="artw-media" href="images/gallery/001.webp">
                 <img src="images/gallery/001_tn.webp" alt="White Wisdom" />
               </a>
@@ -110,46 +111,7 @@
                 </div>
                 <div class="artw-size">40,0 × 50,0 cm</div>
               </div>
-            </article>
-
-            <article id="artwork-102" class="artw">
-              <a class="artw-media" href="images/gallery/002.webp">
-                <img src="images/gallery/002_tn.webp" alt="White Wisdom" />
-              </a>
-              <div class="artw-info">
-                <div class="artw-row">
-                  <h3 class="artw-title">White Wisdom</h3>
-                  <div class="artw-price">4&nbsp;000 kr</div>
-                </div>
-                <div class="artw-size">40,0 × 50,0 cm</div>
-              </div>
-            </article>
-
-            <article id="artwork-103" class="artw">
-              <a class="artw-media" href="images/gallery/003.webp">
-                <img src="images/gallery/003_tn.webp" alt="White Wisdom" />
-              </a>
-              <div class="artw-info">
-                <div class="artw-row">
-                  <h3 class="artw-title">White Wisdom</h3>
-                  <div class="artw-price">4&nbsp;000 kr</div>
-                </div>
-                <div class="artw-size">40,0 × 50,0 cm</div>
-              </div>
-            </article>
-
-            <article id="artwork-104" class="artw">
-              <a class="artw-media" href="images/gallery/004.webp">
-                <img src="images/gallery/004_tn.webp" alt="White Wisdom" />
-              </a>
-              <div class="artw-info">
-                <div class="artw-row">
-                  <h3 class="artw-title">White Wisdom</h3>
-                  <div class="artw-price">4&nbsp;000 kr</div>
-                </div>
-                <div class="artw-size">40,0 × 50,0 cm</div>
-              </div>
-            </article>
+            </article> -->
           </div>
         </section>
       </div>
