--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miss Belka</title>
-    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/geist" />
+    <!-- <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/geist" /> -->
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -98,7 +98,7 @@
             </a>
           </div>
 
-          <div class="album-grid">
+          <div class="album-grid preview">
             <!-- Content will be added with JavaScript -->
             <!-- <article id="artwork-101" class="artw">
               <a class="artw-media" href="images/gallery/001.webp">
