display dynamic number of artworks in album

--- a/album.html
+++ b/album.html
@@ -25,17 +25,19 @@
     <header>
       <div class="wrapper">
         <div class="album-header-content">
-          <!-- <h1><a href="index.html">Nadezda Beletskaya</a></h1> -->
           <h1>Chinese Ink & Watercolours</h1>
           <p>My Chinese painting collection. The complicated and delicate technique give fragile motives of simplicity for everyone to find their own sophisticated understanding.</p>
-          <p>47 works</p>
+          <p>
+            <span id="works-number">0</span>
+            works
+          </p>
         </div>
       </div>
     </header>
     <main class="album-main">
       <div class="wrapper wrapper-large">
         <div class="album-grid">
-          <!-- Album images will be loaded here by album.js -->
+          <!-- Content will be added with JavaScript -->
         </div>
       </div>
     </main>
