--- a/index.html
+++ b/index.html
@@ -86,11 +86,16 @@
       </div>
 
       <div class="wrapper wrapper-large">
-        <section class="album">
+        <section class="album-preview">
           <div class="album-header">
             <div class="album-header-left">
               <a href="album.html"><h2 class="album-title">Chinese Ink &amp; Watercolours</h2></a>
-              <a href="album.html"><span class="album-count">47 works</span></a>
+              <a href="album.html">
+                <span class="album-count">
+                  <span id="works-number">0</span>
+                  works
+                </span>
+              </a>
             </div>
             <a href="album.html" class="btn">
               <span>Show all</span>
