add Read more functionality

--- a/index.html
+++ b/index.html
@@ -40,49 +40,54 @@
 
     <main class="main">
       <div class="wrapper">
-        <article class="presentation">
-          <p>
-            I work with soft pastels, watercolours and ink, acrylic.
-            <br />
-            <br />
-            The vivid and soft hues of watercolours. The preciseness and streamlined features of ink. I have always been fascinated by both of these and the way I can make them both come to live and
-            develop together in my paintings. My art is not only a fusion of these two motifs, but also a journey that unites the classical art school with Chinese painting.
-            <br />
-            <br />
-            “Simplicity is the ultimate sophistication.” Leonardo da Vinci
-            <br />
-            <br />
-            <a href="https://www.instagram.com/missbelka/" target="_blank" rel="noopener noreferrer">Instagram: @missbelka</a>
-            <br />
-            "Belka" Art Studio at Sofierogatan 3B, Malmö
-          </p>
+        <div class="wrapper-presentation">
+          <article id="presentation" class="presentation is-clamped">
+            <p>
+              I work with soft pastels, watercolours and ink, acrylic.
+              <br />
+              <br />
+              The vivid and soft hues of watercolours. The preciseness and streamlined features of ink. I have always been fascinated by both of these and the way I can make them both come to live and
+              develop together in my paintings. My art is not only a fusion of these two motifs, but also a journey that unites the classical art school with Chinese painting.
+              <br />
+              <br />
+              “Simplicity is the ultimate sophistication.” Leonardo da Vinci
+              <br />
+              <br />
+              <a href="https://www.instagram.com/missbelka/" target="_blank" rel="noopener noreferrer">Instagram: @missbelka</a>
+              <br />
+              "Belka" Art Studio at Sofierogatan 3B, Malmö
+            </p>
 
-          <p>
-            <span class="presentation__title">Education</span>
-            <br />
-            2000 - 2006 Surikov School of Classical Arts, Siberia, Russia
-            <br />
-            2008 - 2016 The Chinese Painting and Calligraphy Society of Singapore
-            <br />
-            2022 - present time. Belka Art Studio, Malmö, Sweden
-          </p>
+            <p>
+              <span class="presentation__title">Education</span>
+              <br />
+              2000 - 2006 Surikov School of Classical Arts, Siberia, Russia
+              <br />
+              2008 - 2016 The Chinese Painting and Calligraphy Society of Singapore
+              <br />
+              2022 - present time. Belka Art Studio, Malmö, Sweden
+            </p>
 
-          <p>
-            <span class="presentation__title">Exhibitions</span>
-            <br />
-            2021 Galleri Helg. Malmö, Sweden
-            <br />
-            2022 September: Galleri Helg. Malmö, Sweden
-            <br />
-            2022 October: Luftkastellet. Malmö, Sweden
-            <br />
-            2023 September: Galleri Helg. Malmö, Sweden
-            <br />
-            2024 September: Galleri Helg. Malmö, Sweden
-            <br />
-            2024 September: Romele Konsthall. Juried exhibition. Skåne, Sweden
-          </p>
-        </article>
+            <p>
+              <span class="presentation__title">Exhibitions</span>
+              <br />
+              2021 Galleri Helg. Malmö, Sweden
+              <br />
+              2022 September: Galleri Helg. Malmö, Sweden
+              <br />
+              2022 October: Luftkastellet. Malmö, Sweden
+              <br />
+              2023 September: Galleri Helg. Malmö, Sweden
+              <br />
+              2024 September: Galleri Helg. Malmö, Sweden
+              <br />
+              2024 September: Romele Konsthall. Juried exhibition. Skåne, Sweden
+              <br />
+              2025 September: Galleri Helg. Malmö, Sweden
+            </p>
+          </article>
+          <button id="btn-read-more" class="btn-text">Read more</button>
+        </div>
       </div>
 
       <div class="wrapper wrapper-large">
