add button To Top for album page

--- a/album.html
+++ b/album.html
@@ -42,6 +42,8 @@
       </div>
     </main>
 
+    <button id="btn-to-top" class="btn-to-top" aria-label="Scroll to top"></button>
+
     <script src="js/album.js" type="module"></script>
   </body>
 </html>
