--- a/album.html
+++ b/album.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <nav class="album-nav" aria-label="Site">
+    <nav class="album-nav" aria-label="Main navigation">
       <div class="wrapper wrapper-large">
         <a class="album-nav__home" href="index.html">Home</a>
 
-        <button id="hamburger" class="hamburger hamburger--album" aria-label="Open menu" aria-controls="siteNav" aria-expanded="false">
-          <span class="icon icon-menu"></span>
+        <button id="hamburger" class="hamburger hamburger--album" aria-label="Open menu" aria-controls="site-nav" aria-expanded="false">
+          <span class="icon icon-menu" aria-hidden="true"></span>
         </button>
       </div>
     </nav>
 
-    <nav id="siteNav" class="mobile-nav" aria-hidden="true">
+    <nav id="site-nav" class="mobile-nav" aria-hidden="true" aria-label="Main navigation">
       <a class="mobile-nav__item" href="index.html">Home</a>
     </nav>
 
@@ -42,7 +42,7 @@
       </div>
     </main>
 
-    <button id="btn-to-top" class="btn-to-top" aria-label="Scroll to top"></button>
+    <button id="btn-to-top" class="btn-to-top" type="button" aria-label="Scroll to top"></button>
 
     <script src="js/album.js" type="module"></script>
   </body>
